@@ -22,6 +22,11 @@
 	background: url(../img/header-logo.webp) no-repeat;
 }
 
+/* NoScript Error */
+#no-js {
+	background-color: rgba(197,206,220,0.8);
+}
+
 #ps-overall-footer {
 	background: url(../img/footer-bg.png);
 }
