@@ -256,6 +256,19 @@ div#ps-login-inner {
 	text-decoration: underline;
 }
 
+/* NoScript Error */
+#no-js {
+	position: fixed;
+	top: 1px;
+	bottom: 1px;
+	left: 1px;
+	right: 1px;
+	z-index: 1200;
+	border: 1px solid;
+	background-color: rgba(196, 196, 196, 0.8);
+	display: block;
+}
+
 #ps-loggedin-popup {
 	position: absolute;
 	padding: 2em;
