@@ -15,6 +15,11 @@ body.psychostats {
 	border: 1px solid #666;
 }
 
+/* NoScript Error */
+#no-js {
+	background-color: rgba(44,0,0,0.8);
+}
+
 #ps-container {
 	background: #544b4b;
 }
