@@ -12,13 +12,11 @@
 
 <body class="psychostats">
 <noscript>
-    <style type="text/css">
-		#ps-container {ldelim}display: none;{rdelim}
-		noscript {ldelim}display: block;{rdelim}
-	</style>
-    <div id="error">
-        These pages will not display without javascript enabled.
-    </div>
+	<div id="no-js">
+	<div id="error">
+		These pages will not display without javascript enabled.
+	</div>
+	</div>
 </noscript>
 <div id="ps-container">
 
